[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/screens/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bg/JumpAround_logo_v5.png" type="Texture" id=2]
[ext_resource path="res://scenes/screens/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://label_theme.tres" type="Theme" id=4]
[ext_resource path="res://label_theme_menu.tres" type="Theme" id=5]
[ext_resource path="res://label_theme_bigger.tres" type="Theme" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="Animation" id=2]
resource_name = "PopupAnim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.153893, 0.499999 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 1.0 ],
"method": "popup_centered_ratio"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "DisconnectPopup"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.153893, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 1.0 ],
"method": "popup_centered_ratio"
} ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 75.0
margin_right = -75.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1130.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1130.0
margin_bottom = 237.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 241.0
margin_right = 1130.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/margin_right = 550

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 580.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="CreateButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
editor/display_folded = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 580.0
margin_bottom = 86.0

[node name="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreateButton" index="0"]
text = "Create Game"

[node name="JoinButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 580.0
margin_bottom = 176.0

[node name="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/JoinButton" index="0"]
text = "Join Game"

[node name="AboutButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 180.0
margin_right = 580.0
margin_bottom = 266.0

[node name="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/AboutButton" index="0"]
margin_top = -1.0
margin_bottom = 43.0
text = "About"

[node name="QuitButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
editor/display_folded = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 270.0
margin_right = 580.0
margin_bottom = 356.0

[node name="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitButton" index="0"]
margin_bottom = 44.0
text = "Quit"

[node name="CopyrightLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 601.0
margin_right = 1130.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Created by Pavol Baran 2019"
valign = 2

[node name="ConnectPopup" type="PopupPanel" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 646, 341 )
size_flags_horizontal = 3
theme = ExtResource( 4 )
popup_exclusive = true

[node name="MarginContainer" type="MarginContainer" parent="ConnectPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectPopup/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PopupLabel" type="Label" parent="ConnectPopup/MarginContainer/VBoxContainer"]
margin_right = 1220.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Type the IP of a Server"
align = 1
valign = 1
clip_text = true

[node name="IPLineEdit" type="LineEdit" parent="ConnectPopup/MarginContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 1220.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "127.0.0.1"
align = 1

[node name="HSplitContainer" type="HSplitContainer" parent="ConnectPopup/MarginContainer/VBoxContainer"]
margin_top = 442.0
margin_right = 1220.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OKButton" parent="ConnectPopup/MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 604.0
margin_bottom = 218.0

[node name="Label" parent="ConnectPopup/MarginContainer/VBoxContainer/HSplitContainer/OKButton" index="0"]
text = "OK"
align = 1

[node name="CancelButton" parent="ConnectPopup/MarginContainer/VBoxContainer/HSplitContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 616.0
margin_right = 1220.0
margin_bottom = 218.0

[node name="Label" parent="ConnectPopup/MarginContainer/VBoxContainer/HSplitContainer/CancelButton" index="0"]
text = "Cancel"
align = 1

[node name="ConnectionLabel" type="Label" parent="ConnectPopup/MarginContainer/VBoxContainer"]
visible = false
margin_top = 498.0
margin_right = 1220.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConnectPopup"]
anims/PopupAnim = SubResource( 2 )

[node name="DisconnectedPopup" type="PopupPanel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 640, 367.16 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="DisconnectedPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="DisconnectLabel" type="Label" parent="DisconnectedPopup/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Server disconnected...
You have been redirected to the menu"
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="DisconnectedPopup"]
anims/DisconnectPopup = SubResource( 3 )

[node name="AboutPopup" type="PopupPanel" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 644.444, 366.667 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="AboutPopup"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="AboutLabel" type="Label" parent="AboutPopup/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Avoid mines, pick up orbs, but most importantly: BE THE LAST ONE STANDING"
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AboutPopup"]
anims/AboutPopup = SubResource( 3 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ConnectPopup/MarginContainer/VBoxContainer/HSplitContainer/OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="ConnectPopup/MarginContainer/VBoxContainer/HSplitContainer/CancelButton" to="." method="_on_CancelButton_pressed"]

[editable path="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreateButton"]

[editable path="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/JoinButton"]

[editable path="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/AboutButton"]

[editable path="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitButton"]

[editable path="ConnectPopup/MarginContainer/VBoxContainer/HSplitContainer/OKButton"]

[editable path="ConnectPopup/MarginContainer/VBoxContainer/HSplitContainer/CancelButton"]
